styles/styles.css
.section {
    margin-top: 2rem;
}

.section input {
    margin-bottom: 1rem;
}

.message-left {
    display: flex;
    flex-direction: row;
}

.message-left i {
    align-self: flex-end;
    margin-right: 32px;
}

.topic {
    margin-top: 3rem;
}

.code-container {
    display: flex;
    justify-content: center;
}

